--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,11 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
+
+project.ext.react = [
+    enableHermes: false  // Set this to false
+]
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -77,9 +82,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.recipeapp"
+    namespace "com.washngo"
     defaultConfig {
-        applicationId "com.recipeapp"
+        applicationId "com.washngo"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
