--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "recipeApp",
+  "name": "washngo",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
+    "@rneui/base": "^4.0.0-rc.8",
+    "axios": "^1.7.7",
+    "formik": "^2.4.6",
     "react": "18.3.1",
-    "react-native": "0.75.2"
+    "react-native": "0.75.2",
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-reanimated": "^3.15.1",
+    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0",
+    "react-native-vector-icons": "^10.1.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
